force-app/main/default/objects/LimitsSummary__c/LimitsSummary__c.object-meta.xml
<CustomObject>
    <label>Limits</label>
    <nameField>
        <displayFormat>L{0000}</displayFormat>
        <label>Limits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>