force-app/main/default/objects/LimitsSummary__c/fields/Applicable__c.field-meta.xml
<CustomField>
    <fullName>Applicable__c</fullName>
    <label>Applicable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>