force-app/main/default/objects/LimitsSummary__c/fields/OrgSummary__c.field-meta.xml
<CustomField>
    <fullName>OrgSummary__c</fullName>
    <label>OrgSummary</label>
    <referenceTo>OrgSummary__c</referenceTo>
    <relationshipLabel>Limits</relationshipLabel>
    <relationshipName>Limits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>