force-app/main/default/objects/LimitsSummary__c/fields/Reached__c.field-meta.xml
<CustomField>
    <fullName>Reached__c</fullName>
    <label>Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>