force-app/main/default/objects/LimitsSummary__c/fields/Unattained__c.field-meta.xml
<CustomField>
    <fullName>Unattained__c</fullName>
    <label>Unattained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>